--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,21 @@ blinker==1.6.2
 certifi==2023.7.22
 click==8.1.7
 cloudinary==1.36.0
-dnspython==2.3.0
+dnspython==2.4.2
 email-validator==2.0.0.post2
-Faker==18.13.0
-Flask==1.1.2
+Faker==19.6.2
+Flask==3.0.0
 Flask-Cors==4.0.0
 flask-marshmallow==0.15.0
 Flask-Migrate==4.0.5
 Flask-RESTful==0.3.10
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.1.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 greenlet==3.0.0
 gunicorn==21.2.0
+honcho==1.1.0
 idna==3.4
+importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
@@ -35,3 +37,4 @@ typing_extensions==4.8.0
 urllib3==2.0.6
 Werkzeug==3.0.0
 WTForms==3.0.1
+zipp==3.17.0
