--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-alembic==1.12.0
+alembic==1.8.1
 aniso8601==9.0.1
 blinker==1.6.2
 certifi==2023.7.22
@@ -6,19 +6,19 @@ click==8.1.7
 cloudinary==1.36.0
 dnspython==2.4.2
 email-validator==2.0.0.post2
-Faker==19.6.2
-Flask==3.0.0
-Flask-Cors==4.0.0
+Faker==18.13.0
+Flask==2.5.1
+Flask-Cors==3.0.10
 flask-marshmallow==0.15.0
-Flask-Migrate==4.0.5
-Flask-RESTful==0.3.10
-Flask-SQLAlchemy==3.1.1
+Flask-Migrate==3.1.0
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.2.1
 greenlet==3.0.0
-gunicorn==21.2.0
+gunicorn==20.1.0
 honcho==1.1.0
 idna==3.4
-importlib-metadata==6.8.0
+importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
@@ -26,15 +26,15 @@ MarkupSafe==2.1.3
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.29.0
 packaging==23.2
-psycopg2-binary==2.9.9
+psycopg2-binary==2.9.4
 python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2023.3.post1
+python-dotenv==0.21.0
+pytz==2022.4
 six==1.16.0
 SQLAlchemy==2.0.21
-SQLAlchemy-serializer==1.4.1
+sqlalchemy-serializer==1.4.1
 typing_extensions==4.8.0
 urllib3==2.0.6
-Werkzeug==3.0.0
+werkzeug==2.2.2
 WTForms==3.0.1
-zipp==3.17.0
+zipp==3.9.0
