--- a/app/.env
+++ b/app/.env
@@ -7,4 +7,5 @@ CLOUDINARY_CLOUD_NAME=djk3h614y
 CLOUDINARY_API_KEY=117552991158276
 CLOUDINARY_API_SECRET=dTl75HM8TczEZ9Wj8tBGymRrG_s
 
-DATABASE_URL='postgresql://paws_placesdb_user:1qjBGomNaBfy47WJlfgShfb3LSnxPLTF@dpg-cke2p8sgonuc739kov9g-a.oregon-postgres.render.com/paws_placesdb?sslmode=require'
+DATABASE_URL=postgresql://paws_placesdb_user:1qjBGomNaBfy47WJlfgShfb3LSnxPLTF@dpg-cke2p8sgonuc739kov9g-a.oregon-postgres.render.com:5432/paws_placesdb?sslmode=require
+PYTHON_VERSION=3.10.12
