--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,8 @@ python-dotenv = "*"
 sqlalchemy = "*"
 honcho = "*"
 importlib-metadata = "*"
+flask-login = "*"
+flask-bcrypt = "*"
 
 [dev-packages]
 
