--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,28 @@
-alembic==1.8.1
-aniso8601==9.0.1
-blinker==1.6.2
-certifi==2023.7.22
-click==8.1.7
-cloudinary==1.36.0
-dnspython==2.3.0
-email-validator==2.0.0.post2
-Faker==18.13.0
-Flask==2.2.5
-Flask-Cors==3.0.10
-flask-marshmallow==0.15.0
-Flask-Migrate==3.1.0
-Flask-RESTful==0.3.9
-Flask-SQLAlchemy==3.0.2
-Flask-WTF==1.1.1
-greenlet==3.0.0
-gunicorn==20.1.0
-honcho==1.1.0
-idna==3.4
-importlib-metadata==5.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-Mako==1.2.4
-MarkupSafe==2.1.3
-marshmallow==3.19.0
-marshmallow-sqlalchemy==0.29.0
-packaging==23.2
-psycopg2-binary==2.9.4
-python-dateutil==2.8.2
-python-dotenv==0.21.1
-pytz==2022.4
-six==1.16.0
-SQLAlchemy==2.0.21
-sqlalchemy-serializer==1.4.1
-typing_extensions==4.7.1
-urllib3==2.0.6
-werkzeug==2.2.2
-WTForms==3.0.1
-zipp==3.9.0
+alembic
+cloudinary
+email-validator
+Faker
+Flask
+Flask-Cors
+flask-marshmallow
+Flask-Migrate
+Flask-RESTful
+Flask-SQLAlchemy
+Flask-WTF
+Flask-Login
+gunicorn
+honcho
+importlib-metadata
+marshmallow
+marshmallow-sqlalchemy
+packaging
+psycopg2-binary
+python-dateutil
+python-dotenv
+SQLAlchemy
+SQLAlchemy-serializer
+urllib3
+Werkzeug
+WTForms
+zipp
+flask-bcrypt
