--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ importlib-metadata = "*"
 flask-login = "*"
 flask-bcrypt = "*"
 werkzeug = "==2.3.0"
+flask-jwt-extended = "*"
 
 [dev-packages]
 
